Refactor script dependency tracking (#3168)
Signed-off-by: Jan N. Klug <github@klug.nrw>